; ModuleID = '/home/carl/AnghaBench/scrcpy/app/src/extr_input_manager.c_is_outside_device_screen.c'
source_filename = "/home/carl/AnghaBench/scrcpy/app/src/extr_input_manager.c_is_outside_device_screen.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.input_manager = type { %struct.TYPE_4__* }
%struct.TYPE_4__ = type { %struct.TYPE_3__ }
%struct.TYPE_3__ = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.input_manager*, i32, i32)* @is_outside_device_screen to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @is_outside_device_screen(%struct.input_manager* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.input_manager*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store %struct.input_manager* %0, %struct.input_manager** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %7 = load i32, i32* %5, align 4
  %8 = icmp slt i32 %7, 0
  br i1 %8, label %30, label %9

9:                                                ; preds = %3
  %10 = load i32, i32* %5, align 4
  %11 = load %struct.input_manager*, %struct.input_manager** %4, align 8
  %12 = getelementptr inbounds %struct.input_manager, %struct.input_manager* %11, i32 0, i32 0
  %13 = load %struct.TYPE_4__*, %struct.TYPE_4__** %12, align 8
  %14 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %13, i32 0, i32 0
  %15 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %14, i32 0, i32 0
  %16 = load i32, i32* %15, align 4
  %17 = icmp sge i32 %10, %16
  br i1 %17, label %30, label %18

18:                                               ; preds = %9
  %19 = load i32, i32* %6, align 4
  %20 = icmp slt i32 %19, 0
  br i1 %20, label %30, label %21

21:                                               ; preds = %18
  %22 = load i32, i32* %6, align 4
  %23 = load %struct.input_manager*, %struct.input_manager** %4, align 8
  %24 = getelementptr inbounds %struct.input_manager, %struct.input_manager* %23, i32 0, i32 0
  %25 = load %struct.TYPE_4__*, %struct.TYPE_4__** %24, align 8
  %26 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %25, i32 0, i32 0
  %27 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %26, i32 0, i32 1
  %28 = load i32, i32* %27, align 4
  %29 = icmp sge i32 %22, %28
  br label %30

30:                                               ; preds = %21, %18, %9, %3
  %31 = phi i1 [ true, %18 ], [ true, %9 ], [ true, %3 ], [ %29, %21 ]
  %32 = zext i1 %31 to i32
  ret i32 %32
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
